# Visual_Question_Answering_for_Charts

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
chartvqa/: eval_chartqa.py  eval_chartvqa.py  eval_report.json  evaluate.py  train.py  train_chartqa.py  train_florence.py  trainer_utils.py
chartvqa/models/: base.py  florence.py  vilt.py  vision2seq.py
chartvqa/models/TiQS/: TiQSModel.py  modeling_tiqm.py  prompting.py
chartvqa/notebooks/: test_smolvlm.ipynb  test_vilt.ipynb
chartvqa/utils/: data_utils.py  logging.py  preprocess_dataset.py  setup.py  text.py
configs/: default.yaml  train_chartqa.yaml
configs/dataset/: data.yaml
configs/eval/: eval.yaml
configs/model/: florence.yaml  model.yaml  smolvlm.yaml
configs/train/: base.yaml  florence_lora.yaml
